--- a/site e-commerce/index.html
+++ b/site e-commerce/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Découvrez les dernières chaussures Nike avec des réductions exclusives et une livraison rapide. Commandez dès maintenant !">
-
-    <title>NIKE - Boutique Officielle | Achetez les Meilleurs Produits</title>
-
+    <title>complete responsive ecommerce website design tutorial</title>
 
     <!-- font awesome cdn link  -->
     <link
@@ -57,8 +54,8 @@
             <a href="#" class="btn">add to cart</a>
           </div>
           <div class="image">
-            <img src="images/home-shoe-1.png" class="shoe" alt="chaussure Nike Metcom rouge" />
-            <img src="images/home-text-1.png" class="text" alt="run" />
+            <img src="images/home-shoe-1.png" class="shoe" alt="" />
+            <img src="images/home-text-1.png" class="text" alt="" />
           </div>
         </div>
       </div>
@@ -76,8 +73,8 @@
             <a href="#" class="btn">add to cart</a>
           </div>
           <div class="image">
-            <img src="images/home-shoe-2.png" class="shoe" alt="chaussure Nike Metcom bleu" />
-            <img src="images/home-text-2.png" class="text" alt="run" />
+            <img src="images/home-shoe-2.png" class="shoe" alt="" />
+            <img src="images/home-text-2.png" class="text" alt="" />
           </div>
         </div>
       </div>
@@ -95,8 +92,8 @@
             <a href="#" class="btn">add to cart</a>
           </div>
           <div class="image">
-            <img src="images/home-shoe-3.png" class="shoe" alt="chaussure Nike Metcom orange" />
-            <img src="images/home-text-3.png" class="text" alt="run" />
+            <img src="images/home-shoe-3.png" class="shoe" alt="" />
+            <img src="images/home-text-3.png" class="text" alt="" />
           </div>
         </div>
       </div>
@@ -176,6 +173,7 @@
             <a href="#" class="fas fa-eye"></a>
           </div>
           <img src="images/product-2.png" alt="" />
+          <
           <div class="content">
             <h3>nike shoes</h3>
             <div class="price">$120.99 <span>$150.99</span></div>
@@ -463,7 +461,7 @@
 
     <!-- footer section  -->
 
-    <footer class="footer">
+    <section class="footer">
       <div class="box-container">
         <div class="box">
           <h3>our stores</h3>
@@ -498,10 +496,10 @@
         </div>
 
         <div class="credit">
-          created by <span>devgui</span> &copy;2024 | all rights reserved
+          created by <span>DevGui</span>&copy;2024 | all rights reserved
         </div>
       </div>
-    </footer>
+    </section>
 
     <!-- custom js file link  -->
     <script src="script.js"></script>
