--- a/Formateur/index.html
+++ b/Formateur/index.html
@@ -1252,7 +1252,7 @@
         </div>
 
         <p class="copyright">
-          Copyright © 2022 <a href="#">coding team</a>. All rights reserved.
+          Copyright &copy; 2025<a href="#">DevGui</a>. All rights reserved.
         </p>
       </footer>
     </div>
