--- a/chaussure/index.html
+++ b/chaussure/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="navItem">
                 <div class="search">
-                    <input type="text" placeholder="Search..." class="searchInput">
+                    <input type="search" placeholder="Search..." class="searchInput">
                     <img src="./img/search.png" width="20" height="20" alt="" class="searchIcon">
                 </div>
             </div>
@@ -139,6 +139,8 @@
             <div class="cardIcons">
                 <img src="./img/visa.png" width="40" alt="" class="cardIcon">
                 <img src="./img/master.png" alt="" width="40" class="cardIcon">
+                <img src="./img/paypal.png" alt="" width="40" class="cardIcon">
+
             </div>
             <input type="password" class="payInput" placeholder="Card Number">
             <div class="cardInfo">
@@ -153,17 +155,17 @@
     <div class="gallery">
         <div class="galleryItem">
             <h1 class="galleryTitle">Be Yourself!</h1>
-            <img src="https://images.pexels.com/photos/9295809/pexels-photo-9295809.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+            <img src="img/airNike.jpg"
                 alt="" class="galleryImg">
         </div>
         <div class="galleryItem">
-            <img src="https://images.pexels.com/photos/1040427/pexels-photo-1040427.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+            <img src="img/airNike1.jpg"
                 alt="" class="galleryImg">
             <h1 class="galleryTitle">This is the First Day of Your New Life</h1>
         </div>
         <div class="galleryItem">
             <h1 class="galleryTitle">Just Do it!</h1>
-            <img src="https://images.pexels.com/photos/7856965/pexels-photo-7856965.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+            <img src="/img/airNike3.jpg"
                 alt="" class="galleryImg">
         </div>
     </div>
